--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="icons.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon-loc.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#2c3e50">
+    <meta name="description" content="Site reporting and monitoring application">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.json">
-    <title>TodoMatic</title>
+    <title>SiteSpotter</title>
   </head>
   <body>
     <div id="root"></div>
